fix alignment issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -18,11 +18,6 @@ body {
   text-align: center;
 } 
 
-/* tr, tr td {
-  font-size: 0.5m;
-} */
-
-
 .button {
   padding: 10%;
   color: gold;
